[gd_scene load_steps=3 format=3 uid="uid://bp2036rfavopb"]

[ext_resource type="Script" uid="uid://g8rrfabaoqa5" path="res://Code/Objects/warp_test.gd" id="1_k3vby"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rc543"]

[node name="warp_test" type="Node2D"]
script = ExtResource("1_k3vby")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_rc543")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
